--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "npx tsc --watch"
+    "start": "node dist/index.js",
+    "watch": "npx tsc-watch --onSuccess \"npm run start\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.11",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
+    "supertest": "^7.0.0",
+    "tsc-watch": "^6.2.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2"
   }
 }
