--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.11",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "eslint": "^8.57.0",
@@ -28,6 +29,8 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2"
+    "swagger-ui-express": "^5.0.0",
+    "ts-jest": "^29.1.2",
+    "yaml": "^2.4.2"
   }
 }
