--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
     "jest": "^29.7.0",
+    "mongodb": "^6.6.1",
     "swagger-ui-express": "^5.0.0",
     "ts-jest": "^29.1.2",
     "yaml": "^2.4.2"
